--- a/client/style.css
+++ b/client/style.css
@@ -1,20 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Alegreya Sans", sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 
 body {
-  background: #343541;
+  background: #20262e;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #20262e;
 
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@ body {
 }
 
 .ai {
-  background: #40414f;
+  background: #1f395c;
 }
 
 .chat {
@@ -147,4 +147,8 @@ button {
 form img {
   width: 30px;
   height: 30px;
+}
+
+.buffer {
+  margin-top: 2rem;
 }
